feat: week9 jwt authentication and user update api
